tests/reference/asr-structs_08-fa4dbf0.stderr
semantic error: StructType constructor has more arguments than the number of struct members
  --> tests/errors/structs_08.py:13:29
   |
13 |     test_dude3 : StringIO = StringIO(integer_asr, 3, 5, 2)
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
